<resources>
    <string name="app_name">Event Manager</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Mail</string>
    <string name="enter_email_detail">Enter your registered e-mail address to reset your password</string>
    <string name="enter_name">Enter name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="nav_open">nav_open</string>
    <string name="nav_close">nav_close</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="new_password">Create New Password</string>
    <string name="new_password_detail">Create new password</string>
    <string name="verify">Verify</string>
    <string name="send">send</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="change_password">Change Password</string>
    <string name="enter_mail_address">Enter Mail Address</string>
    <string name="severity_values">Severity Values</string>
    <string name="summary">Summary</string>
    <string name="summaryDet">Using the buttons below, you can review the summary of the information coming from your device according to the parameters and see the percentage distributions.</string>
    <string name="spinner_prompt_1">Select Correlation Parameter</string>
    <string name="spinner_prompt_2">Select Correlation Value</string>
    <string name="add_corr">+ ADD parameter</string>
    <string name="eti_value">Eti Value</string>
    <string name="eti_type">Eti Type</string>
    <string name="category">Category</string>
    <string name="correlations">Correlatıons</string>
    <string name="severity">Severity</string>
    <string name="subcategory">Subcategory</string>
    <string name="status">Status</string>
    <string name="correlations_small">Correlations</string>
    <string name="correlations_list">Correlation List</string>
    <string name="correlations_list_detail">The correlations created are shown in this table</string>
    <string name="correlations_small_detail">You can filter the data coming from your device according to the parameters and create a correlation</string>
    <string name="enter_correlation_name">Enter Correlation Name</string>
    <string name="correlation_name">Correlation Name</string>
    <string name="correlation_parameters">Correlation Parameters</string>
    <string name="correlation_name2">Correlation Name:</string>
    <string name="correlation_parameter">Correlation Parameter:</string>
    <string name="data">Data:</string>
    <string name="add_correlation">+ New Correlation</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="event_manager">Event Manager</string>
    <string name="alert_name">Alert Name</string>
</resources>