<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorrelationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp">


            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/presentation"
                app:layout_constraintBottom_toTopOf="@id/summary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correlations_small"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintTop_toBottomOf="@id/headerImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/summaryDetail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/correlations_small_detail"
                android:textSize="16sp"
                android:textColor="@color/darkBlue"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/enterName"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/correlation_name"
            android:textSize="16sp"
            android:textColor="@color/darkBlue"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/summaryDetail"
            app:layout_constraintStart_toStartOf="@id/corrName" />

            <EditText
            android:id="@+id/corrName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:hint="@string/enter_correlation_name"
            android:singleLine="true"
            android:drawablePadding="8dp"
            android:ellipsize="start"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/enterName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            android:layout_marginHorizontal="10dp"
            android:pointerIcon="horizontal_double_arrow"
            android:background="@drawable/dropdown_outline"
            android:prompt="@string/spinner_prompt_1"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/corrName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/dropdown_outline"
            android:prompt="@string/spinner_prompt_2"
            app:layout_constraintTop_toBottomOf="@id/spinner1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/add_corr"
            android:id="@+id/addBtn"
            android:layout_marginHorizontal="10dp"
            android:textSize="14sp"
            android:backgroundTint="@color/darkBlue"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:cornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/corrListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/addBtn"
                app:layout_constraintBottom_toTopOf="@id/createCorrBtn">


                <TextView
                    android:id="@+id/corrListHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correlation_parameters"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/corrList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:background="@color/background"
                    android:textColor="@color/darkBlue"
                    android:layout_marginHorizontal="20dp"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/corrListHeader"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Create Correlatıon"
            android:id="@+id/createCorrBtn"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/pink1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:cornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/corrListLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/home_drawer_layout"
        app:menu="@menu/home_navigation_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>



