<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".SendMailOtpCode">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/headerImage"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_enter_mail"
                    app:layout_constraintBottom_toTopOf="@id/summary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_mail_address"
                    android:textSize="25sp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintTop_toBottomOf="@id/headerImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <TextView
                    android:id="@+id/summaryDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_email_detail"
                    android:textSize="16sp"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/summary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/enter_email"
                android:drawableLeft="@drawable/ic_baseline_mail_24"
                android:drawableTint="@color/darkBlue"
                android:singleLine="true"
                android:ellipsize="start"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>



            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send"
                android:id="@+id/sendOtpButton"
                android:textSize="18sp"
                android:backgroundTint="@color/darkBlue"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>