<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:src="@drawable/login"
                app:layout_constraintBottom_toTopOf="@id/headerLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/enter_email"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawableTint="@color/darkBlue"
                android:singleLine="true"
                android:drawablePadding="8dp"
                android:ellipsize="start"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:drawableTint="@color/darkBlue"
                android:singleLine="true"
                android:ellipsize="start"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/forgotPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:textColor="@color/darkBlue"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/password"/>
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:backgroundTint="@color/darkBlue"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gotoRegister"
                android:text="@string/not_yet_registered_sign_up"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/darkBlue"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>