<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/login"
                app:layout_constraintBottom_toTopOf="@id/headerLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headerSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/enter_name"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawableTint="@color/darkBlue"
                android:singleLine="true"
                android:ellipsize="start"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/enter_email"
                android:drawableLeft="@drawable/ic_baseline_mail_24"
                android:drawableTint="@color/darkBlue"
                android:singleLine="true"
                android:ellipsize="start"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:ellipsize="start"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawableTint="@color/darkBlue"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:id="@+id/registerBtn"
                android:textSize="18sp"
                android:backgroundTint="@color/darkBlue"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"/>

            <TextView
                android:id="@+id/gotoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already an user? Login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/darkBlue"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>